--- a/demos/assignments/a04.md
+++ b/demos/assignments/a04.md
@@ -1,26 +1,41 @@
-### 🔹 Assignment 04: Object Types, Optional & Union Properties
+# 📘 **Assignment 04**
+
+## 🎯 **Objective:**
+
+Apply your understanding of **object types**, **optional properties**, and **union types** to build small but meaningful code examples.
 
 ---
 
-### **Q1: Vehicle Object Type**
-
-Define a `Vehicle` object type with:
-
-- Required properties: `type` (string), `brand` (string), `year` (number)
-- Optional property: `color` (string)
-- Method: `getDescription()` that returns a string describing the vehicle
-
-Create two vehicles - one with color and one without - and display their descriptions.
+## 📝 **Tasks:**
 
 ---
 
-### **Q2: User Profile with Union Types**
+### 🔹 Q1: Define an object type for `Book`
 
-Define a `UserProfile` object type with:
+Create a `type` alias called `Book` with the following fields:
 
-- Required properties: `id` (number), `username` (string)
-- Union type property: `accountType` that can be either "basic", "premium", or "admin"
-- Optional property: `lastLogin` (Date)
-- Method: `getAccountInfo()` that returns user details
+* `title: string`
+* `author: string`
+* `publishedYear: number`
+* `summary?: string` (optional)
 
-Create multiple users with different account types.
+Then, create **two book objects**:
+
+* One with summary
+* One without summary
+
+---
+
+### 🔹 Q2: Create a function `printBookDetails(book: Book)`
+
+It should:
+
+* Print all book details
+* Print the summary only if it's provided
+
+---
+
+### 🔹 Q3: Use Union Types for `productId`
+
+Declare a variable `productId` that can accept a `string` or a `number`.
+Assign both values and print them using a function `displayProductId(id: number | string)`.
